fix(files): stop aside container from stretching on desktop

--- a/pages/files/browse/Browse.less
+++ b/pages/files/browse/Browse.less
@@ -1,6 +1,6 @@
 .files-container {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto 350px;
   grid-template-rows: auto auto auto;
   gap: 0px @normal-spacing;
   grid-auto-flow: row;
@@ -26,8 +26,6 @@
   }
 
   .files-aside-container {
-    width: 350px;
-    min-width: 350px;
     height: fit-content;
     position: sticky;
     top: 0;
